# rag-server

./: .dockerignore  .gitignore  Dockerfile  README.md  openapi-run.yaml  pyproject.toml
app/: main.py
app/api/: health.py  healthz.py  query.py  utils.py
app/core/: config.py
app/domain/: models.py  schemas.py
app/infrastructure/: retriever.py
app/infrastructure/clients/: gemini_client.py  llm_client_interface.py
app/infrastructure/embeddings/: embedder.py
app/infrastructure/ingestion/: parser.py
app/infrastructure/repositories/: bm25_keyword_store.py  file_vector_store.py  keyword_store_interface.py  tokenizer_interface.py  tokenizers.py  vector_store_interface.py
app/infrastructure/repositories/tokenizer_data/: stopwords.txt
app/services/: rag_service.py
